--- a/tut6.html
+++ b/tut6.html
@@ -21,6 +21,6 @@
     <!-- i am not getting how to enter the image from stored data-->
     <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://media.istockphoto.com/id/1408578035/photo/a-platform-for-product-photography.jpg?s=612x612&amp;w=is&amp;k=20&amp;c=NogQ6cwocnqtr_MNM3aj2nfRpbrm0mEdc1RRm6xJgFk=">
     <img src="image/download (1).jpg" alt="there is a image ">
-<img src="image/download.jpg" alt="there is a image">
+<img src="image/download.jpg" alt="there is a imagetut">
 </body>
 </html>
