--- a/tut14.html
+++ b/tut14.html
@@ -34,11 +34,11 @@
 
 <p class="redbag">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam recusandae quaerat aspernatur aut aperiam nesciunt molestiae dolor blanditiis minima ipsa, quis dolorem nisi?</p>
 <div>
-<p id="lastpara">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolorem dolores nihil nesciunt perspiciatis veritatis illo inventore laudantium esse eum ullam magni labore consectetur itaque vel cupiditate maiores necessitatibus sint!</p>
+<p>
+Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, dolorem dolores nihil nesciunt perspiciatis veritatis illo inventore laudantium esse eum ullam magni labore consectetur itaque vel cupiditate maiores necessitatibus sint!</p>
 <span>This is a span </span>
 </div>
 <footer>This is a footer 
      </footer>
-
 </body>
 </html>
