--- a/tut6.html
+++ b/tut6.html
@@ -19,8 +19,8 @@
     <!-- image is not present in the text son alt is shown  -->
     <!-- alt is called remote image -->
     <!-- i am not getting how to enter the image from stored data-->
-    <img style="display: block;-webkit-user-select: none;margin: auto;background-color: hsl(0, 0%, 90%);transition: background-color 300ms;" src="https://media.istockphoto.com/id/1408578035/photo/a-platform-for-product-photography.jpg?s=612x612&amp;w=is&amp;k=20&amp;c=NogQ6cwocnqtr_MNM3aj2nfRpbrm0mEdc1RRm6xJgFk=">
-    <img src="image/download (1).jpg" alt="there is a image ">
 <img src="image/download.jpg" alt="there is a imagetut">
+<img src="image/wallphoto.jpg" alt="picture of the wall ">
+<img src="image/download (1).jpg" alt="there is the picture same as above ">
 </body>
 </html>
