--- a/tut7.html
+++ b/tut7.html
@@ -31,7 +31,7 @@ this type gives pointers in different way  -->
 </ol>
 </ul>
 <h3>Html Table</h3>
-<table>
+<!-- <table>
 <thead>
     <tr>
         <th> Name </th>
@@ -42,22 +42,50 @@ this type gives pointers in different way  -->
 
 </thead>
 <tbody>
-    <tr>
+    <tr>           
     <td> rush </td>
     <td> 343434 </td>
     <td> programmer </td>    
-    </tr>
+</tr>
     <tr>
-        <td> Rohan das chinasvami  </td>
+        <td> Rohan das  </td>
         <td>34343</td>
         <td>html expert</td>    
+    </tr>
+    <tr>
+        <td>siya</td>
+        <td>343434</td>
+        <td>programmer</td>    
+    </tr>
+</tbody> -->
+<!-- </table> -->
+<table>
+    <!-- <th></th> -->
+    <thead>
+        <tr>
+            <th>NAME</th>
+            <!-- <TH></TH> -->
+            <th>GRADE</th>
+            <th>RANK</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>RAM</td>
+            <td>A++</td>
+            <td>1</td>
         </tr>
         <tr>
-            <td>siya</td>
-            <td>343434</td>
-            <td>programmer</td>    
-            </tr>
-</tbody>
+            <td>SIYA</td>
+            <td>A</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>BHOPAL</td>
+            <td>B++</td>
+            <td>3</td>
+        </tr>
+    </tbody>
 </table>
 </body>
 </html>
