--- a/tut9.html
+++ b/tut9.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inline and block elements</title>
+    <style>
+        .checker{
+            color: red ;
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    
-
+<!--     
+    <li class="checker">there is li </li><br>
+    <em class="checker">there is em</em><br>
+    <div class="checker">there is div </div> -->
     <p>Lorem, ipsum dolor.</p>
     <span>This is a paragraph</span>
     <span>This is a paragraph</span>
